--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
 
             <div class="col-md-6 text-center" data-aos="fade-up">
-                <img src="" alt="Origem"
+                <img src="./static/img/capa.jpg" alt="Origem"
                      class="img-fluid rounded shadow" style="width: 530px; height: auto; border-radius: 10px;">
             </div>
         </div>
@@ -181,7 +181,7 @@
             <div class="col-md-4 text-center">
                 <div class="card text-dark">
                     <div class="card-body">
-                        <a href=""><h4>A Gente Faz o Cardápio que Você Sonhar</h4></a>
+                        <a href="/cardapio.html"><h4>A Gente Faz o Cardápio que Você Sonhar</h4></a>
                         <p>Do jeitinho que você gosta: <br> Sabores que abraçam, temperos que contam histórias e pratos
                             que deixam o coração quentinho.</p>
                     </div>
@@ -199,7 +199,7 @@
         </div>
     </div>
 </section>
-!-- Rodapé -->
+
 <footer class="bg-dark text-light text-center py-4 mt-5">
     © 2025 Brisa & Aroma | Todos os direitos reservados.
 </footer>
